# RNAnue

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  Dockerfile  README.md
cmake/: FindDeflate.cmake  FindHTSlib.cmake  FindViennaRNA.cmake  htslib.cmake  viennaRNA.cmake  zlib.cmake
example/: params.cfg
include/: Align.hpp  Analysis.hpp  Analyze.hpp  Base.hpp  Closing.hpp  Cluster.hpp  Clustering.hpp  Config.h  Config.hpp  Constants.hpp  CooptimalPairwiseAligner.hpp  CustomSamTags.hpp  Data.hpp  DataTypes.hpp  Detect.hpp  EvaluatedSplitRecords.hpp  FeatureAnnotator.hpp  FeatureParser.hpp  FeatureWriter.hpp  Helper.hpp  IBPTree.hpp  IITree.hpp  Logger.hpp  MPMC.hpp  Preproc.hpp  Preprocess.hpp  Runner.hpp  ScoringMatrix.hpp  SeqRickshaw.hpp  SplitReadCalling.hpp  StateTransition.hpp  Traceback.hpp  Utility.hpp  VariantOverload.hpp
include/annotation/: FeatureAnnotator.hpp  FeatureParser.hpp  FeatureWriter.hpp  FileType.hpp  Orientation.hpp
include/parameters/: AlignParameters.hpp  AnalyzeParameters.hpp  CompleteParameters.hpp  DetectParameters.hpp  GeneralParameters.hpp  ParameterOptions.hpp  ParameterParser.hpp  ParameterValidator.hpp  PreprocessParameters.hpp
include/pipelines/: Pipeline.hpp  PipelineData.hpp
include/pipelines/align/: Align.hpp  AlignData.hpp  AlignSample.hpp
include/pipelines/analyze/: Analyze.hpp  AnalyzeData.hpp  AnalyzeSample.hpp  InteractionCluster.hpp  InteractionClusterGenerator.hpp  Segment.hpp  SplitRecordsParser.hpp
include/pipelines/dataTypes/: GenomicFeature.hpp  GenomicRegion.hpp  GenomicStrand.hpp  SamRecord.hpp  SplitRecords.hpp  SplitRecordsVariantGroups.hpp
include/pipelines/detect/: AsyncSplitRecordGroupBuffer.hpp  Detect.hpp  DetectData.hpp  DetectSample.hpp  SplitRecordsComplementarityEvaluator.hpp  SplitRecordsConstructor.hpp  SplitRecordsEvaluationParameters.hpp  SplitRecordsEvaluator.hpp  SplitRecordsGenerator.hpp  SplitRecordsHybridizationEvaluator.hpp  SplitRecordsSplicingEvaluator.hpp
include/pipelines/preprocess/: Adapter.hpp  PairedRecordMerger.hpp  Preprocess.hpp  PreprocessData.hpp  PreprocessSample.hpp  RecordTrimmer.hpp  TrimConfig.hpp
source/: Align.cpp  Analysis.cpp  Base.cpp  Clustering.cpp  Data.cpp  Helper.cpp  ScoringMatrix.cpp  SeqRickshaw.cpp  SplitReadCalling.cpp  main.cpp
src/: Align.cpp  Analysis.cpp  Analyze.cpp  Base.cpp  Closing.cpp  Cluster.cpp  Clustering.cpp  CooptimalPairwiseAligner.cpp  Data.cpp  DataTypes.cpp  Detect.cpp  EvaluatedSplitRecords.cpp  FeatureAnnotator.cpp  FeatureParser.cpp  FeatureWriter.cpp  IBPTree.cpp  Logger.cpp  Preproc.cpp  Preprocess.cpp  Runner.cpp  ScoringMatrix.cpp  SeqRickshaw.cpp  SplitReadCalling.cpp  StateTransition.cpp  Traceback.cpp  Utility.cpp  main.cpp
src/annotation/: FeatureAnnotator.cpp  FeatureParser.cpp  FeatureWriter.cpp  Orientation.cpp
src/parameters/: ParameterOptions.cpp  ParameterParser.cpp
src/pipelines/align/: Align.cpp  AlignData.cpp
src/pipelines/analyze/: Analyze.cpp  AnalyzeData.cpp  InteractionCluster.cpp  InteractionClusterGenerator.cpp  Segment.cpp
src/pipelines/dataTypes/: GenomicRegion.cpp
src/pipelines/detect/: Detect.cpp  DetectData.cpp  SplitRecordsComplementarityEvaluator.cpp  SplitRecordsConstructor.cpp  SplitRecordsEvaluator.cpp  SplitRecordsHybridizationEvaluator.cpp  SplitRecordsSplicingEvaluator.cpp
src/pipelines/preprocess/: Preprocess.cpp  PreprocessData.cpp
submodules/ViennaRNA/: Makefile.in
submodules/ViennaRNA/ViennaRNA-2.6.4/: RNAlib2.pc  config.h  config.status  libtool
submodules/ViennaRNA/ViennaRNA-2.6.4/autom4te.cache/: requests  traces.0
submodules/ViennaRNA/ViennaRNA-2.6.4/src/RNAlocmin/: RNAlocmin  config.status
submodules/ViennaRNA/ViennaRNA-2.6.4/src/RNAlocmin/.deps/: RNAlocmin.Po  RNAlocmin_cmdline.Po  barrier_tree.Po  findpath_pk.Po  flood.Po  globals.Po  hash_util.Po  main.Po  move_set_inside.Po  move_set_pk.Po  neighbourhood.Po  pknots.Po  treeplot.Po
submodules/ViennaRNA/ViennaRNA-2.6.4/src/Utils/: b2ct  ct2db  popt
submodules/ViennaRNA/ViennaRNA-2.6.4/src/Utils/.deps/: b2ct.Po  ct2db.Po  ct2db_cmdl.Po  popt.Po
submodules/ViennaRNA/ViennaRNA-2.6.4/src/ViennaRNA/.deps/: 2Dfold.Plo  2Dpfold.Plo  LPfold.Plo  Lfold.Plo  MEA.Plo  ProfileAln.Plo  ProfileDist.Plo  RNAstruct.Plo  ali_plex.Plo  alifold.Plo  alipfold.Plo  alphabet.Plo  (+48 more)
submodules/ViennaRNA/autom4te.cache/: output.0  requests  traces.0
submodules/bam_sort/: bam.c  bam_sort.c  bedidx.c  sam_opts.c  sam_utils.c
submodules/segemehl/: CMakeLists.txt
submodules/segemehl/include/: alignment.h  aluruSort.h  annotation.h  bamio.h  basic-types.h  bedfiles.h  bgzip.h  biofiles.h  bitArray.h  bitVector.h  bitvectoralg.h  brendel.h  charsequence.h  citation.h  container.h  falphabet.h  fileBins.h  filebuffer.h  fileio.h  gzidx.h  gzip.h  haarz.h  intervaltree.h  iupac.h  junctions.h  karlin.h  kdchain.h  kdseed.h  locus.h  manopt.h  manout.h  manoutformats.h  mapfrag.h  mappingqual.h  match.h  matchfiles.h  matchfilesfields.h  matealign.h  mathematics.h  md5.h  (+22 more)
submodules/segemehl/libs/: alignment.c  aluruSort.c  annotation.c  bamio.c  bedfiles.c  bgzip.c  biofiles.c  bitArray.c  bitVector.c  bitvectoralg.c  brendel.c  charsequence.c  container.c  fileBins.c  filebuffer.c  fileio.c  gzidx.c  gzip.c  haarz.c  info.c  intervaltree.c  iupac.c  junctions.c  karlin.c  kdchain.c  kdseed.c  locus.c  manopt.c  manout.c  mapfrag.c  mappingqual.c  match.c  matealign.c  mathematics.c  md5.c  merge.c  multicharseq.c  nw.c  pigeon.c  portable_endian.c  (+13 more)
tests/: AsyncSplitRecordGroupBufferTests.cpp  CMakeLists.txt  DetectTests.cpp  EvaluatedSplitRecordsTests.cpp  FeatureAnnotatorTests.cpp  InteractionClusterGeneratorTests.cpp  InteractionClusterTests.cpp  ParseSamRecords.hpp  ReadClusterTest.cpp  SplitRecordsSplicingEvaluatorTests.cpp  SplitRecordsTests.cpp
tests/test_data/: interactionClusterRecords.sam  splitRecords.bam
validation/: FilterBAMByRecordIDs.py  MirtarFilterGFF.py  MirtarRNAnueValidation.py  MirtarRNAnueValidation_v2.py  MirtarSegemehlValidation.py  MirtarValidation.py  RawAlignmentToMirtar.py  UniqueMirtarEntries.py
(+66 files in other folders)
